# OpenXR-info

./: .gitmodules  CMakeLists.txt
src/: main.cpp
